# race_stack_2526

./: .gitignore  .gitmodules  README.md  autodrive_devkit.sh  korea.csv  korea.yaml  korea_mintime_detailed.csv  launch_in_wsl.sh  run.sh  setup_dep.sh  simulate.sh  start_vnc.sh
src/: README.md
src/autodrive_devkit/: setup.py
src/autodrive_devkit/autodrive_roboracer/: autodrive_bridge.py
src/autodrive_devkit/config/: mapper_params_online_async.yaml
src/autodrive_devkit/launch/: bringup_graphics.launch.py  bringup_headless.launch.py  slam.launch.py
src/autodrive_devkit/rviz/: autodrive_roboracer.rviz
src/f110_msgs/: CMakeLists.txt
src/f110_msgs/msg/: DriveState.msg  Obstacle.msg
src/f1tenth_gym_ros/config/: sim.yaml
src/f1tenth_gym_ros/maps/: arc.pgm  arc.psd  arc_obs.pgm  arc_obs.yaml  arc_obs_2.pgm  arc_obs_2.yaml
src/frenet_conversion/: package.xml
src/frenet_conversion/frenet_conversion/: frenet_converter.py
src/gap_finder/: package.xml
src/gap_finder/gap_finder/: gap_finder_node.py
src/launch_master/: package.xml  setup.py
src/launch_master/launch/: sim_launch.py
src/local_planner/: package.xml  setup.cfg  setup.py
src/local_planner/local_planner/: frenet_converter.py  spliner.py
src/my_package/: setup.py
src/particle_filter/: package.xml  setup.py
src/particle_filter/config/: localize.yaml  (+1 more)
src/perception/: package.xml  setup.py
src/perception/launch/: perception_launch.xml
src/perception/perception/: ReadME.md  detect.py
src/pure_pursuit/: README.md  package.xml
src/state_machine/: README.md  package.xml  setup.py
(+21 files in other folders)
